--- a/src/components/Guns/Guns.css
+++ b/src/components/Guns/Guns.css
@@ -1,8 +1,3 @@
-.guns-container h1,
-h2 {
-  font-family: "Metamorphous", cursive;
-}
-
 .cart-container {
   background-color: #c4c4c4;
   height: 100%;
@@ -14,10 +9,6 @@ h2 {
   cursor: pointer;
 }
 
-.icon {
-  font-size: 1.5rem;
-}
-
 .cart-container button {
   background-color: #fff;
   font-size: medium;
@@ -26,6 +17,10 @@ h2 {
   width: 220px;
   height: 40px;
   border-radius: 5px;
+}
+
+.cart-container h3:hover {
+  color: #c59b58;
 }
 
 .cart-container button:hover {
